# Atelie-Digital

./: .gitignore  README.md  docker-compose.yml  env-exemplo.txt  pyproject.toml
Backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml
Backend/config/: settings.py  urls.py
Backend/users/: serializers.py  views.py
Frontend/: package-lock.json
apps/accounts/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0002_create_groups_and_permissions.py  0002_initial.py  0002_setup_permissions.py  0003_user_date_of_birth.py  0004_alter_profile_profile_image_alter_user_date_of_birth.py  0005_alter_user_phone_number.py
apps/chats/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_alter_message_options_alter_chat_unique_together_and_more.py  0002_initial.py  0003_alter_chat_unique_together.py
apps/core/: models.py  views.py
apps/orders/: admin.py  models.py  urls.py  utils.py  views.py
apps/products/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/stores/: admin.py  forms.py  models.py  urls.py  views.py
apps/utils/: purchases.py  storage.py
docker/nginx/: Dockerfile  nginx.conf
docker/web/: Dockerfile
setup/: asgi.py  settings.py  urls.py
static/css/: index.css
static/css/errors/: 400.css  (+3 more)
templates/: index.html
templates/errors/: 400.html  403.html  404.html  500.html
templates/partials/: advertisingCarousel.html  button.html  cardsCarousel.html  footer.html  header.html  messages.html  navbar.html  searchbar.html  sidebar.html
templates/shared/: base.html  base_clean.html
(+167 files in other folders)
