[project]
name = "atelie-digital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=5.2.6",
    "django-channels>=0.7.0",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-faker>=2.0.0",
    "ruff>=0.14.0",
]
